Change banner text font size to avoid wrapping.

--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -317,7 +317,7 @@ header .intro-text .intro-heading {
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 32px;
+        font-size: 28px;
         //font-style: italic;
         line-height: 40px;
     }
@@ -364,8 +364,8 @@ section h3.section-subheading {
 
 .service a,
 .service a:hover {
-  color: #222;
-  text-decoration: none;
+    color: #222;
+    text-decoration: none;
 }
 
 .portfolio-item {
